--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>user-service</module>
         <module>wallet-service</module>
+        <module>notification-service</module>
+        <module>transaction-service</module>
     </modules>
 
     <properties>
