--- a/transaction-service/pom.xml
+++ b/transaction-service/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wallet-service</artifactId>
+    <artifactId>transaction-service</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
